# advanced-genai-rag

./: .gitignore  README.md  requirements-local.txt  requirements.txt
baseline/advanced_genAI-main/: README.md  TASKS.md  (+13 more)
baseline/package/: .env.example  README.md  pyproject.toml
baseline/package/notebooks/: 02_retrieval_orchestration.ipynb  031_evaluation_and_analysis.ipynb  03_evaluation_and_analysis.ipynb  04_reliability_aware_rag.ipynb
baseline/package/scripts/: run_pipeline.py
baseline/package/src/rag/: __init__.py
baseline/package/src/rag/evaluation/: analyzer.py  evaluator.py  metrics.py  rational.py
baseline/package/src/rag/groundedness/: __init__.py  pipeline.py
baseline/package/src/rag/preprocessing/: __init__.py  benchmark.py  cleaner.py  metadata.py  relevance.py  validator.py
baseline/package/src/rag/reliability/: __init__.py  abstention.py  evidence_sufficiency.py  recovery.py  reliable_orchestrator.py
baseline/package/src/rag/retrieval/: classifier.py  fusion.py  orchestrator.py  translator.py
baseline/package/src/rag/retrieval/agents/: __init__.py  answer_synthesizer.py  bm25.py  dense.py  graph.py
baseline/package/src/rag/retrieval/orchestrators/: __init__.py  adaptive.py  base.py  confidence.py  voting.py  waterfall.py
baseline/package/src/rag/retrieval/retriever/: base.py  confidence.py  voting.py  waterfall.py
baseline/package/src/rag/utils/: __init__.py  io.py  nlp.py
baseline/package/tests/: test_evaluation.py  test_preprocessing.py  test_retrieval.py
package/: README.md  pyproject.toml
report/: 01_baseline.qmd  02_architecture.qmd  03_reliability.qmd  04_evaluation.qmd  05_conclusion.qmd  _quarto.yml  index.qmd
(+1635 files in other folders)
